--- a/scouting/desktop-client/pages/home/home.html
+++ b/scouting/desktop-client/pages/home/home.html
@@ -11,7 +11,7 @@
 <nav class="navbar">
     <div class="navbar-container">
         <a href="#" class="navbar-logo">
-            <img src="../../assets/logo.bmp" alt="ScoutOps Icon">
+            <img src="../../assets/logo.bmp" alt="scouting_app Icon">
             <span>SCOUT-OPS</span>
         </a>
         <div class="navbar-links">
