--- a/scouting/desktop-client/pages/index/index.html
+++ b/scouting/desktop-client/pages/index/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ScoutOps</title>
+    <title>scouting_app</title>
     <link rel="icon" href="../../assets/logo.bmp" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,10 +13,10 @@
 </div>
 <div class="content">
 <div class="banner-container">
-    <img src="../../assets/banner.png" alt="ScoutOps" class="banner">
+    <img src="../../assets/banner.png" alt="scouting_app" class="banner">
     <div class="main">
-        <h1>Welcome to ScoutOps</h1>
-        <p>ScoutOps is a platform that allows you to manage your scouting activities. You can create and manage your scouting events, and also manage your scouts. You can also create and manage your scouting reports. ScoutOps is a platform that allows you to manage your scouting activities. You can create and manage your scouting events, and also manage your scouts. You can also create and manage your scouting reports.</p>
+        <h1>Welcome to scouting_app</h1>
+        <p>scouting_app is a platform that allows you to manage your scouting activities. You can create and manage your scouting events, and also manage your scouts. You can also create and manage your scouting reports. scouting_app is a platform that allows you to manage your scouting activities. You can create and manage your scouting events, and also manage your scouts. You can also create and manage your scouting reports.</p>
     </div>
 </div>
 
@@ -25,7 +25,7 @@
 </div>
 <!-- index.html -->
 <div class="footer">
-    <p>&copy; 2024 ScoutOps. All rights reserved.</p>
+    <p>&copy; 2024 scouting_app. All rights reserved.</p>
 </div>
 </body>
 </html>
