--- a/scouting/desktop-client/pages/serversHeath/serverZHeath.html
+++ b/scouting/desktop-client/pages/serversHeath/serverZHeath.html
@@ -184,7 +184,7 @@
     <nav class="navbar">
       <div class="navbar-container">
         <a href="#" class="navbar-logo">
-          <img src="../../assets/logo.bmp" alt="ScoutOps Icon" />
+          <img src="../../assets/logo.bmp" alt="scouting_app Icon" />
           <span>SCOUT-OPS</span>
         </a>
         <div class="navbar-links">
